# cluster-offline

./: .dockerignore  .gitignore  DEPLOY_FRESH_VPS.md  Prototype.md  README.md  architecture.md  codespacesTech.md  docker-compose.yml  package.json  pnpm-lock.yaml  technical.md
.devcontainer/: devcontainer.json  post-start.sh
api/: .dockerignore  .env.example  .gitignore  Dockerfile  drizzle.config.ts  drop_notes.ts  package.json  tsconfig.json
api/drizzle/: 0000_lively_natasha_romanoff.sql  0001_melted_ben_grimm.sql  0002_skinny_the_fury.sql  0003_light_secret_warriors.sql  0004_left_wonder_man.sql
api/src/: cleanup.ts  index.ts
front/: .dockerignore  .env.example  .gitignore  Dockerfile  MIGRATION_NUXT.md  README.md  UI_REDESIGN_SKILL.md  UPDATE_LAZYLOAD_DROPDOWN.md  UPDATE_THEME_SYNC.md  app.vue  components.json  eslint.config.mjs  next.config.ts  nuxt.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
front/components/: AppSidebar.vue  AppTopBar.vue  CommandPalette.vue  EditorStatusBar.vue  EmptyState.vue  FolderPicker.vue  MainEditor.vue  NoteCard.vue  NoteList.vue  NotesOverview.vue  PageHeader.vue  TagSuggestionInput.vue  ThemeToggle.vue
front/composables/: useAuth.ts  useNoteEditor.ts  useNotes.ts  useSync.ts
front/layouts/: default.vue
front/middleware/: auth.global.ts
front/pages/: index.vue  login.vue  register.vue
image-wasm/: .gitignore  Cargo.toml
image-wasm/src/: lib.rs
k3s/: 00-namespace.yaml  01-security.yaml  02-database.yaml  03-backend.yaml  04-frontend.yaml  05-ingress.yaml  06-issuer.yaml  07-migrate-job.yaml
(+105 files in other folders)
