[package]
name = "image-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

# We disable default features to keep the binary small.
# We explicitly enable "jpeg", "png", and "webp" (for decoding webp when user edits).
image = { version = "0.24", default-features = false, features = ["jpeg", "png", "webp"] }
